--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                  <ul>
                      <li class="current"><a href="index.html">Home</a></li>
                      <li><a href="About.html">About</a></li>
-                     <li><a href="Services.html">services</a></li>
+                     <li><a href="services.html">services</a></li>
                  </ul>
              </nav>
          </div>
