--- a/About.html
+++ b/About.html
@@ -22,7 +22,7 @@
                  <ul>
                      <li ><a href="index.html">Home</a></li>
                      <li class ="current"><a href="About.html">About</a></li>
-                     <li><a href="Services.html">services</a></li>
+                     <li><a href="services.html">services</a></li>
                  </ul>
              </nav>
          </div>
