--- a/index.html
+++ b/index.html
@@ -45,31 +45,31 @@
         <div class="mySlides fade">
           <div class="numbertext">1 / 3</div>
           <img src="./images/mars-sector-6-IgUR1iX0mqM-unsplash.jpg" style="width:100%">
-          <div class="text"><h1 >Providing Affordable Insurance Services</h1>
+          <!--<div class="text"><h1 >Providing Affordable Insurance Services</h1>
             <p>
                When lives and limbs are at stake, time is everything. <br>
                 That’s why A Nelstar alliance of dedicated emergency <br>
                 medical transport partners stands ready to help in critical situations. <br>
-            </p></div>
+            </p></div>-->
         </div>
         <div class="mySlides fade">
           <div class="numbertext">2 / 3</div>
           <img src="./images/pexels-christina-morillo-1181516.jpg" style="width:100%">
-          <div class="text"><h1 >Providing Affordable Insurance Services</h1>
+          <!--<div class="text"><h1 >Providing Affordable Insurance Services</h1>
             <p>
                When lives and limbs are at stake, time is everything. <br>
                 That’s why A Nelstar alliance of dedicated emergency <br>
                 medical transport partners stands ready to help in critical situations.</div>
-        </div>
+        </div>-->
         <div class="mySlides fade">
           <div class="numbertext">3 / 3</div>
           <img src="./images/pexels-christina-morillo-1181422.jpg" style="width:100%">
-          <div class="text"><h1 >Providing Affordable Insurance Services</h1>
+          <!--<div class="text"><h1 >Providing Affordable Insurance Services</h1>
             <p>
                When lives and limbs are at stake, time is everything. <br>
                 That’s why A Nelstar alliance of dedicated emergency <br>
                 medical transport partners stands ready to help in critical situations.</div>
-        </div>
+        </div>-->
         <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
         <a class="next" onclick="plusSlides(1)">&#10095;</a>
       </div>
