--- a/About.html
+++ b/About.html
@@ -32,7 +32,7 @@
      <section id ="main">
      <div class="container">
     <article id ="main-col">
-        <h1 class="page-title"> About Us </h1>
+        <h1 class="page-title"> About Us  </h1>
      
         <p class="about-title">Nelsatar is a kenyan-based insurance and investment services company offering products ranging from life, 
             health, accident, property, and casualty policies to pensions, equity plans, mortgages and other financial services. 
@@ -64,7 +64,7 @@
      </div>
     </section>
          <footer>
-             <p>HarmaTech Webdesign ,Copyright&copy;2022</p>
+             <p>HarmaTech Webdesign ke,Copyright&copy;2022</p>
          </footer>
      </section> 
     </body>
